src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AccessoriesWarrantyPrice1__c</fullName>
        <label>有约定配件保修价格</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AccessoriesWarrantyPrice__c</fullName>
        <label>配件保修价格</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>未约定</fullName>
                </value>
                <value>
                    <fullName>有约定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyBusinessScope__c</fullName>
        <label>需要代理商具备的经营范围</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <formula>IF( Account.Name =  Opportunity__r.Account.Name , &quot;是&quot;, &quot;否&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>销售机会客户名与客户名是否一致</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChannelDeliveryMethod__c</fullName>
        <label>渠道交付方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>采购订货交付</fullName>
                </value>
                <value>
                    <fullName>库存即刻交付</fullName>
                </value>
                <value>
                    <fullName>库存预留交付</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>是否渠道</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassifyIII__c</fullName>
        <label>分类III</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ClassifyII__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>爱尔集团</fullName>
                </value>
                <value>
                    <fullName>华厦集团</fullName>
                </value>
                <value>
                    <fullName>华正集团</fullName>
                </value>
                <value>
                    <fullName>远程视界</fullName>
                </value>
                <value>
                    <fullName>蓝海之略</fullName>
                </value>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>阿玛施集团</fullName>
                </value>
                <value>
                    <fullName>普瑞集团</fullName>
                </value>
                <value>
                    <fullName>全科医疗</fullName>
                </value>
                <value>
                    <fullName>朝聚眼科</fullName>
                </value>
                <value>
                    <fullName>新视界</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClassifyII__c</fullName>
        <label>分类II</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Classify__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立直销</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>集团客户</fullName>
                </value>
                <value>
                    <fullName>个案代理</fullName>
                </value>
                <value>
                    <fullName>区域代理</fullName>
                </value>
                <value>
                    <fullName>投资平台</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classify__c</fullName>
        <label>分类I</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PublicPrivate__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>直销</fullName>
                </value>
                <value>
                    <fullName>渠道</fullName>
                </value>
                <value>
                    <fullName>公立直销</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConfigurationListModel__c</fullName>
        <label>最终合同名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>是否标配</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractAmount__c</fullName>
        <label>合同金额(元)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractCharacter__c</fullName>
        <label>合同性质</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>内贸</fullName>
                </value>
                <value>
                    <fullName>外贸</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractReviewOwnerProfile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>合同评审所有人简档</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractReviewStatus__c</fullName>
        <label>合同评审状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractTextFormat__c</fullName>
        <label>合同文本格式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>标准合同</fullName>
                </value>
                <value>
                    <fullName>非标合同：法务已审核通过</fullName>
                </value>
                <value>
                    <fullName>非标合同：法务已审核，有修改意见</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerBusinessScope__c</fullName>
        <label>客户经营范围</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebtHolders__c</fullName>
        <label>催款责任人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>合同交货期（天）</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Opportunity__r.Field1__c</formula>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountRate__c</fullName>
        <formula>ContractAmount__c / EquipmentBasePrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>整单折扣率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EquipmentBasePrice__c</fullName>
        <label>设备基准总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedDate__c</fullName>
        <label>预计签定日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否上传附件</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FifthPaymentTerms__c</fullName>
        <label>第五笔付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FifthWithdrawalAmount__c</fullName>
        <formula>ContractAmount__c  *  Five__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>第五笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinalCustomer_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终用户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>合同</relationshipLabel>
        <relationshipName>FinalCustomerContract_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalName__c</fullName>
        <formula>FinalCustomer_del__r.Name +ConfigurationListModel__c</formula>
        <label>合同名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>是否融资</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstPaymentTerm__c</fullName>
        <label>第一笔付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstWithdrawalAmount__c</fullName>
        <formula>First__c *  ContractAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>第一笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First__c</fullName>
        <label>第一笔回款比例%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Five__c</fullName>
        <label>第五笔回款比例%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Four__c</fullName>
        <label>第四笔回款比例%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FourthPaymentTerms__c</fullName>
        <label>第四笔付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourthWithdrawalAmount__c</fullName>
        <formula>ContractAmount__c  *  Four__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>第四笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HKBL__c</fullName>
        <label>回款比例</label>
        <summarizedField>PaymentMethod__c.RemittanceRatio__c</summarizedField>
        <summaryForeignKey>PaymentMethod__c.ContractReview__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HospitalBusinessLicense__c</fullName>
        <label>医院营业执照</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalPracticeApproval__c</fullName>
        <label>医院执业许可/批准书</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InPacking__c</fullName>
        <defaultValue>&quot;否&quot;</defaultValue>
        <label>是否打包（停用）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introductions__c</fullName>
        <label>其他说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingOrganizing__c</fullName>
        <label>销售组织</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北京高视远望科技有限责任公司</fullName>
                </value>
                <value>
                    <fullName>上海明望医疗器械有限公司</fullName>
                </value>
                <value>
                    <fullName>天津高视晶品医疗技术有限公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityCustomerName__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>销售机会客户名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会名称</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>合同</relationshipLabel>
        <relationshipName>Opportunity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderClerk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单业务员</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OrderClerk1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>如果订单数大于0，说明该合同为重复审批，不再重新生成订单。</description>
        <label>OrderNumber</label>
        <summaryForeignKey>Order.ContractId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>归属人</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PerformancEsplit__c</fullName>
        <label>业绩绩效拆分</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>合同创建人简档名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicPrivate__c</fullName>
        <label>公立/民营</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>公立</fullName>
                </value>
                <value>
                    <fullName>民营</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>业务员</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesman</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScopeLicense__c</fullName>
        <label>代理商资质是否符合</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondPaymentTerms__c</fullName>
        <label>第二笔付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondWithdrawalAmount__c</fullName>
        <formula>Second__c *  ContractAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>第二笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second__c</fullName>
        <label>第二笔回款比例%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StandardAcceptanceClause1__c</fullName>
        <label>非标准验收条款</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StandardAcceptanceClause__c</fullName>
        <label>是否标准验收条款</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThirdPaymentTerms__c</fullName>
        <label>第三笔付款方式</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdWithdrawalAmount__c</fullName>
        <formula>ContractAmount__c  *  Third__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>第三笔回款金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third__c</fullName>
        <label>第三笔回款比例%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TypeContractChange__c</fullName>
        <label>合同变更原因</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>配置价格变更</fullName>
                </value>
                <value>
                    <fullName>保修条款变更</fullName>
                </value>
                <value>
                    <fullName>付款方式变更</fullName>
                </value>
                <value>
                    <fullName>其他变更</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WarrantyPeriod__c</fullName>
        <label>保修期（月）</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhetherOA__c</fullName>
        <label>合同是否上传OA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WholeDiscountRate__c</fullName>
        <formula>IF(EquipmentBasePrice__c = 0, 0, ContractAmount__c / EquipmentBasePrice__c)</formula>
        <label>整单设备折扣率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yanbao__c</fullName>
        <formula>IF(WarrantyPeriod__c&gt;12, &quot;是&quot;, &quot;否&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>是否延保</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZZYHKHXZ__c</fullName>
        <formula>Opportunity__r.EndUserNature__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最终用户：客户性质</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contractnumber__c</fullName>
        <label>纸本合同编号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contracttitle__c</fullName>
        <label>合同名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerfirst__c</fullName>
        <formula>text(Account.CustomerFirst__c)</formula>
        <label>客户是否首营</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>htyszt__c</fullName>
        <label>合同预审状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>否</fullName>
                    <default>true</default>
                    <label>否</label>
                </value>
                <value>
                    <fullName>是</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>htzt__c</fullName>
        <formula>IF( text(ContractReviewStatus__c)=&quot;已审批&quot; ,&quot;是&quot;, &quot;否&quot;)</formula>
        <label>合同状态</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPacked__c</fullName>
        <formula>IF( OR(AND( CONTAINS( CreatedBy.Profile.Name , &quot;大型&quot;) , Opportunity__r.DXConNum__c &gt;= 2),AND( CONTAINS( CreatedBy.Profile.Name , &quot;常规&quot;) , Opportunity__r.DXConNum__c &gt;0)) , &quot;是&quot;,&quot;否&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>打包</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsdkh__c</fullName>
        <formula>text(Account.BigCustomer__c)</formula>
        <label>是否是大项目客户</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfyzzht__c</fullName>
        <label>是否有纸质合同</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                    <default>true</default>
                    <label>是</label>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>yb__c</fullName>
        <label>是否延保</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>A</fullName>
        <active>true</active>
        <description>hasUploadedAttachment</description>
        <errorConditionFormula>AND(
   Field1__c = false,
    !ISNEW(),
   OR(
    DATEVALUE(CreatedDate) &gt;= DATEVALUE(&apos;2018-06-04&apos;), 
    ISNULL(CreatedDate) 
   ),
     ISPICKVAL(ContractReviewStatus__c, &apos;待审批&apos;) 
)</errorConditionFormula>
        <errorMessage>合同评审通过前，请上传附件！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dailishangzizhi</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text( Channel__c ) =&quot;是&quot;, text(ScopeLicense__c )=&quot;&quot; )</errorConditionFormula>
        <errorMessage>如果是渠道销售的时候必须填写代理商资质是否符合！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>diyu80</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   Opportunity__r.Probability  &lt; 0.80,
   $Profile.Name != &apos;系统管理员&apos;, 
   $Profile.Name != &apos;System Administrator&apos;
   
)</errorConditionFormula>
        <errorDisplayField>Salesman__c</errorDisplayField>
        <errorMessage>如果销售机会可能性低于80%，合同预审无法保存；</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fukuanbili</fullName>
        <active>true</active>
        <errorConditionFormula>First__c  +  Second__c  +  Third__c  +  Four__c  +  Five__c   &lt;&gt; 1</errorConditionFormula>
        <errorMessage>付款比例相加不能超过100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>hetongyanshoutiaokun</fullName>
        <active>true</active>
        <errorConditionFormula>IF(text(StandardAcceptanceClause__c)=&quot;否&quot;,StandardAcceptanceClause1__c=&quot;&quot;, null)</errorConditionFormula>
        <errorDisplayField>StandardAcceptanceClause1__c</errorDisplayField>
        <errorMessage>如果不是验收条款的合同必须填写此文本框！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>htzt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  htzt__c =&quot;是&quot;, text(TypeContractChange__c ) = &quot;&quot; )</errorConditionFormula>
        <errorMessage>合同是已审批状态不允许修改</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>huikuanbili</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
HKBL__c&gt;1,
$Profile.Name != &apos;系统管理员&apos;, 
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorMessage>回款比例不能大于百分之百，请确认后在保存。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>shifouqudao1</fullName>
        <active>true</active>
        <errorConditionFormula>(text(Channel__c )=&quot;否&quot; )&amp;&amp; (text(HospitalPracticeApproval__c) =&quot;&quot; &amp;&amp;  text(HospitalBusinessLicense__c) =&quot;&quot; ) || (text(HospitalPracticeApproval__c)  &lt;&gt; &quot;&quot;  &amp;&amp; text(HospitalBusinessLicense__c) =&quot;&quot; ) || (text(HospitalPracticeApproval__c) =&quot;&quot;  &amp;&amp; text(HospitalBusinessLicense__c)  &lt;&gt; &quot;&quot; )</errorConditionFormula>
        <errorMessage>如果不是渠道销售，必须核实是否有医院营业执照及执业许可！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>youyuedingpeijianjiage</fullName>
        <active>true</active>
        <errorConditionFormula>IF(text(AccessoriesWarrantyPrice__c)=&quot;有约定&quot;, AccessoriesWarrantyPrice1__c=&quot;&quot;,null)</errorConditionFormula>
        <errorDisplayField>AccessoriesWarrantyPrice1__c</errorDisplayField>
        <errorMessage>有约定配件的价格必须填写此文本框</errorMessage>
    </validationRules>
</CustomObject>